--- a/qft/index.html
+++ b/qft/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title></title>
+    <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background: #fff;
+      }
+      .imagen-grande {
+        width: 1000px;      /* Puedes ajustar el tamaño aquí */
+        max-width: 95vw;
+        display: block;
+        margin: 0 auto;
+      }
+      .boton-badge {
+        margin-top: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .boton-badge img {
+        width: 110px;      /* Botón más pequeño */
+        height: auto;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Imagen principal grande y centrada -->
+    <img src="IMG_3419.gif" alt="Nota manuscrita" class="imagen-grande">
 
+    <!-- Botón pequeño y centrado debajo de la imagen -->
+    <div class="boton-badge">
+      <a href="https://secreto.site/a2wfy7">
+        <img src="https://img.shields.io/badge/click%20here-black?style=for-the-badge" alt="click here">
+      </a>
+    </div>
+  </body>
+</html>
