--- a/qft/index.html
+++ b/qft/index.html
@@ -12,7 +12,7 @@
         min-height: 100vh;
         margin: 0;
         font-family: Arial, sans-serif;
-        background: #fff;
+        background: #000000;
       }
       .imagen-grande {
         width: 1000px;      /* Puedes ajustar el tamaño aquí */
@@ -30,11 +30,17 @@
         width: 110px;      /* Botón más pequeño */
         height: auto;
       }
+      <audio controls>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+      }
     </style>
   </head>
   <body>
     <!-- Imagen principal grande y centrada -->
-    <img src="IMG_3419.gif" alt="Nota manuscrita" class="imagen-grande">
+    <img src="IMG_3421.jpeg" alt="Nota manuscrita" class="imagen-grande">
 
     <!-- Botón pequeño y centrado debajo de la imagen -->
     <div class="boton-badge">
