--- a/qft/index.html
+++ b/qft/index.html
@@ -44,8 +44,8 @@ Your browser does not support the audio element.
 
     <!-- Botón pequeño y centrado debajo de la imagen -->
     <div class="boton-badge">
-      <a href="https://secreto.site/a2wfy7">
-        <img src="https://img.shields.io/badge/click%20here-black?style=for-the-badge" alt=":)">
+      <a href="https://secreto.site/jp/arkjy7">
+        <img src="https://img.shields.io/badge/:)%20-black?style=for-the-badge" alt=":)">
       </a>
     </div>
   </body>
