--- a/qft/index.html
+++ b/qft/index.html
@@ -32,7 +32,7 @@
       }
       <audio controls>
   <source src="vivo.ogg" type="audio/ogg">
-  <source src="vivo.mp3" type="audio/mpeg">
+  <source src="vivo.mp3" type="audio/mp3">
 Your browser does not support the audio element.
 </audio>
       }
