--- a/qft/index.html
+++ b/qft/index.html
@@ -12,7 +12,7 @@
         min-height: 100vh;
         margin: 0;
         font-family: Arial, sans-serif;
-        background: #000000;
+        background: #fff;
       }
       .imagen-grande {
         width: 400px;      /* Puedes ajustar el tamaño aquí */
@@ -37,10 +37,16 @@
     <!-- Imagen principal grande y centrada -->
     <img src="IMG_3429.png" alt="Nota manuscrita" class="imagen-grande">
 
-    <audio controls>
-  <source src="vivo.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-    </audio>
+    <!--
+Source - https://stackoverflow.com/a
+Posted by Vinith
+Retrieved 2025-11-24, License - CC BY-SA 3.0
+-->
+
+<audio autoplay loop>
+      <source src="fire.mp3">
+</audio>
+
 
 
     <!-- Botón pequeño y centrado debajo de la imagen -->
